// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentsList container matches snapshot 1`] = `
ReactWrapper {
  Symbol(enzyme.__unrendered__): <ContentsList
    ariaLabel="Pages in this guide"
    className=""
    role="navigation"
    visuallyHiddenText="Contents"
>
    <Item
        ariaCurrent="page"
        className=""
        current={false}
        href="#"
        onClick={[Function]}
    >
        Test
    </Item>
    <Item
        ariaCurrent="page"
        className=""
        current={true}
        href="#"
        onClick={[Function]}
    >
        Test Text
    </Item>
</ContentsList>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "ariaLabel": "Pages in this guide",
      "children": Array [
        <Item
          ariaCurrent="page"
          className=""
          current={false}
          href="#"
          onClick={[Function]}
>
          Test
</Item>,
        <Item
          ariaCurrent="page"
          className=""
          current={true}
          href="#"
          onClick={[Function]}
>
          Test Text
</Item>,
      ],
      "className": "",
      "role": "navigation",
      "visuallyHiddenText": "Contents",
    },
    "ref": null,
    "rendered": Object {
      "instance": <nav
        class="nhsuk-contents-list "
        role="navigation"
        aria-label="Pages in this guide"
>
        <h2
                class="nhsuk-u-visually-hidden"
        >
                Contents
        </h2>
        <ol
                class="nhsuk-contents-list__list"
        >
                <li
                        class="nhsuk-contents-list__item "
                        aria-current="page"
                >
                        <a
                                class="nhsuk-contents-list__link"
                                href="#"
                        >
                                Test
                        </a>
                </li>
                <li
                        class="nhsuk-contents-list__item "
                        aria-current="page"
                >
                        <span
                                class="nhsuk-contents-list__current"
                        >
                                Test Text
                        </span>
                </li>
        </ol>
</nav>,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "aria-label": "Pages in this guide",
        "children": Array [
          <h2
            className="nhsuk-u-visually-hidden"
>
            Contents
</h2>,
          <ol
            className="nhsuk-contents-list__list"
>
            <Item
                        ariaCurrent="page"
                        className=""
                        current={false}
                        href="#"
                        onClick={[Function]}
            >
                        Test
            </Item>
            <Item
                        ariaCurrent="page"
                        className=""
                        current={true}
                        href="#"
                        onClick={[Function]}
            >
                        Test Text
            </Item>
</ol>,
        ],
        "className": "nhsuk-contents-list ",
        "role": "navigation",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": <h2
            class="nhsuk-u-visually-hidden"
>
            Contents
</h2>,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Contents",
            "className": "nhsuk-u-visually-hidden",
          },
          "ref": null,
          "rendered": Array [
            "Contents",
          ],
          "type": "h2",
        },
        Object {
          "instance": <ol
            class="nhsuk-contents-list__list"
>
            <li
                        class="nhsuk-contents-list__item "
                        aria-current="page"
            >
                        <a
                                    class="nhsuk-contents-list__link"
                                    href="#"
                        >
                                    Test
                        </a>
            </li>
            <li
                        class="nhsuk-contents-list__item "
                        aria-current="page"
            >
                        <span
                                    class="nhsuk-contents-list__current"
                        >
                                    Test Text
                        </span>
            </li>
</ol>,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <Item
                ariaCurrent="page"
                className=""
                current={false}
                href="#"
                onClick={[Function]}
>
                Test
</Item>,
              <Item
                ariaCurrent="page"
                className=""
                current={true}
                href="#"
                onClick={[Function]}
>
                Test Text
</Item>,
            ],
            "className": "nhsuk-contents-list__list",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "ariaCurrent": "page",
                "children": "Test",
                "className": "",
                "current": false,
                "href": "#",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": Object {
                "instance": <li
                  class="nhsuk-contents-list__item "
                  aria-current="page"
>
                  <a
                                    class="nhsuk-contents-list__link"
                                    href="#"
                  >
                                    Test
                  </a>
</li>,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "aria-current": "page",
                  "children": <a
                    className="nhsuk-contents-list__link"
                    href="#"
                    onClick={[Function]}
>
                    Test
</a>,
                  "className": "nhsuk-contents-list__item ",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": <a
                      class="nhsuk-contents-list__link"
                      href="#"
>
                      Test
</a>,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Test",
                      "className": "nhsuk-contents-list__link",
                      "href": "#",
                      "onClick": [Function],
                    },
                    "ref": null,
                    "rendered": Array [
                      "Test",
                    ],
                    "type": "a",
                  },
                ],
                "type": "li",
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "ariaCurrent": "page",
                "children": "Test Text",
                "className": "",
                "current": true,
                "href": "#",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": Object {
                "instance": <li
                  class="nhsuk-contents-list__item "
                  aria-current="page"
>
                  <span
                                    class="nhsuk-contents-list__current"
                  >
                                    Test Text
                  </span>
</li>,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "aria-current": "page",
                  "children": <span
                    className="nhsuk-contents-list__current"
>
                    Test Text
</span>,
                  "className": "nhsuk-contents-list__item ",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": <span
                      class="nhsuk-contents-list__current"
>
                      Test Text
</span>,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Test Text",
                      "className": "nhsuk-contents-list__current",
                    },
                    "ref": null,
                    "rendered": Array [
                      "Test Text",
                    ],
                    "type": "span",
                  },
                ],
                "type": "li",
              },
              "type": [Function],
            },
          ],
          "type": "ol",
        },
      ],
      "type": "nav",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "ariaLabel": "Pages in this guide",
        "children": Array [
          <Item
            ariaCurrent="page"
            className=""
            current={false}
            href="#"
            onClick={[Function]}
>
            Test
</Item>,
          <Item
            ariaCurrent="page"
            className=""
            current={true}
            href="#"
            onClick={[Function]}
>
            Test Text
</Item>,
        ],
        "className": "",
        "role": "navigation",
        "visuallyHiddenText": "Contents",
      },
      "ref": null,
      "rendered": Object {
        "instance": <nav
          class="nhsuk-contents-list "
          role="navigation"
          aria-label="Pages in this guide"
>
          <h2
                    class="nhsuk-u-visually-hidden"
          >
                    Contents
          </h2>
          <ol
                    class="nhsuk-contents-list__list"
          >
                    <li
                              class="nhsuk-contents-list__item "
                              aria-current="page"
                    >
                              <a
                                        class="nhsuk-contents-list__link"
                                        href="#"
                              >
                                        Test
                              </a>
                    </li>
                    <li
                              class="nhsuk-contents-list__item "
                              aria-current="page"
                    >
                              <span
                                        class="nhsuk-contents-list__current"
                              >
                                        Test Text
                              </span>
                    </li>
          </ol>
</nav>,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "aria-label": "Pages in this guide",
          "children": Array [
            <h2
              className="nhsuk-u-visually-hidden"
>
              Contents
</h2>,
            <ol
              className="nhsuk-contents-list__list"
>
              <Item
                            ariaCurrent="page"
                            className=""
                            current={false}
                            href="#"
                            onClick={[Function]}
              >
                            Test
              </Item>
              <Item
                            ariaCurrent="page"
                            className=""
                            current={true}
                            href="#"
                            onClick={[Function]}
              >
                            Test Text
              </Item>
</ol>,
          ],
          "className": "nhsuk-contents-list ",
          "role": "navigation",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": <h2
              class="nhsuk-u-visually-hidden"
>
              Contents
</h2>,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Contents",
              "className": "nhsuk-u-visually-hidden",
            },
            "ref": null,
            "rendered": Array [
              "Contents",
            ],
            "type": "h2",
          },
          Object {
            "instance": <ol
              class="nhsuk-contents-list__list"
>
              <li
                            class="nhsuk-contents-list__item "
                            aria-current="page"
              >
                            <a
                                          class="nhsuk-contents-list__link"
                                          href="#"
                            >
                                          Test
                            </a>
              </li>
              <li
                            class="nhsuk-contents-list__item "
                            aria-current="page"
              >
                            <span
                                          class="nhsuk-contents-list__current"
                            >
                                          Test Text
                            </span>
              </li>
</ol>,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <Item
                  ariaCurrent="page"
                  className=""
                  current={false}
                  href="#"
                  onClick={[Function]}
>
                  Test
</Item>,
                <Item
                  ariaCurrent="page"
                  className=""
                  current={true}
                  href="#"
                  onClick={[Function]}
>
                  Test Text
</Item>,
              ],
              "className": "nhsuk-contents-list__list",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "ariaCurrent": "page",
                  "children": "Test",
                  "className": "",
                  "current": false,
                  "href": "#",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": Object {
                  "instance": <li
                    class="nhsuk-contents-list__item "
                    aria-current="page"
>
                    <a
                                        class="nhsuk-contents-list__link"
                                        href="#"
                    >
                                        Test
                    </a>
</li>,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "aria-current": "page",
                    "children": <a
                      className="nhsuk-contents-list__link"
                      href="#"
                      onClick={[Function]}
>
                      Test
</a>,
                    "className": "nhsuk-contents-list__item ",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": <a
                        class="nhsuk-contents-list__link"
                        href="#"
>
                        Test
</a>,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "Test",
                        "className": "nhsuk-contents-list__link",
                        "href": "#",
                        "onClick": [Function],
                      },
                      "ref": null,
                      "rendered": Array [
                        "Test",
                      ],
                      "type": "a",
                    },
                  ],
                  "type": "li",
                },
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "ariaCurrent": "page",
                  "children": "Test Text",
                  "className": "",
                  "current": true,
                  "href": "#",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": Object {
                  "instance": <li
                    class="nhsuk-contents-list__item "
                    aria-current="page"
>
                    <span
                                        class="nhsuk-contents-list__current"
                    >
                                        Test Text
                    </span>
</li>,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "aria-current": "page",
                    "children": <span
                      className="nhsuk-contents-list__current"
>
                      Test Text
</span>,
                    "className": "nhsuk-contents-list__item ",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": <span
                        class="nhsuk-contents-list__current"
>
                        Test Text
</span>,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "Test Text",
                        "className": "nhsuk-contents-list__current",
                      },
                      "ref": null,
                      "rendered": Array [
                        "Test Text",
                      ],
                      "type": "span",
                    },
                  ],
                  "type": "li",
                },
                "type": [Function],
              },
            ],
            "type": "ol",
          },
        ],
        "type": "nav",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`ContentsList current item matches snapshot 1`] = `
ReactWrapper {
  Symbol(enzyme.__unrendered__): <Item
    ariaCurrent="page"
    className=""
    current={true}
    href="#"
    onClick={[Function]}
>
    Test Text
</Item>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "ariaCurrent": "page",
      "children": "Test Text",
      "className": "",
      "current": true,
      "href": "#",
      "onClick": [Function],
    },
    "ref": null,
    "rendered": Object {
      "instance": <li
        class="nhsuk-contents-list__item "
        aria-current="page"
>
        <span
                class="nhsuk-contents-list__current"
        >
                Test Text
        </span>
</li>,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "aria-current": "page",
        "children": <span
          className="nhsuk-contents-list__current"
>
          Test Text
</span>,
        "className": "nhsuk-contents-list__item ",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": <span
            class="nhsuk-contents-list__current"
>
            Test Text
</span>,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Test Text",
            "className": "nhsuk-contents-list__current",
          },
          "ref": null,
          "rendered": Array [
            "Test Text",
          ],
          "type": "span",
        },
      ],
      "type": "li",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "ariaCurrent": "page",
        "children": "Test Text",
        "className": "",
        "current": true,
        "href": "#",
        "onClick": [Function],
      },
      "ref": null,
      "rendered": Object {
        "instance": <li
          class="nhsuk-contents-list__item "
          aria-current="page"
>
          <span
                    class="nhsuk-contents-list__current"
          >
                    Test Text
          </span>
</li>,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "aria-current": "page",
          "children": <span
            className="nhsuk-contents-list__current"
>
            Test Text
</span>,
          "className": "nhsuk-contents-list__item ",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": <span
              class="nhsuk-contents-list__current"
>
              Test Text
</span>,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Test Text",
              "className": "nhsuk-contents-list__current",
            },
            "ref": null,
            "rendered": Array [
              "Test Text",
            ],
            "type": "span",
          },
        ],
        "type": "li",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`ContentsList item matches snapshot 1`] = `
ReactWrapper {
  Symbol(enzyme.__unrendered__): <Item
    ariaCurrent="page"
    className=""
    current={false}
    href="#"
    onClick={[Function]}
>
    Test Text
</Item>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "ariaCurrent": "page",
      "children": "Test Text",
      "className": "",
      "current": false,
      "href": "#",
      "onClick": [Function],
    },
    "ref": null,
    "rendered": Object {
      "instance": <li
        class="nhsuk-contents-list__item "
        aria-current="page"
>
        <a
                class="nhsuk-contents-list__link"
                href="#"
        >
                Test Text
        </a>
</li>,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "aria-current": "page",
        "children": <a
          className="nhsuk-contents-list__link"
          href="#"
          onClick={[Function]}
>
          Test Text
</a>,
        "className": "nhsuk-contents-list__item ",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": <a
            class="nhsuk-contents-list__link"
            href="#"
>
            Test Text
</a>,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Test Text",
            "className": "nhsuk-contents-list__link",
            "href": "#",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": Array [
            "Test Text",
          ],
          "type": "a",
        },
      ],
      "type": "li",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "ariaCurrent": "page",
        "children": "Test Text",
        "className": "",
        "current": false,
        "href": "#",
        "onClick": [Function],
      },
      "ref": null,
      "rendered": Object {
        "instance": <li
          class="nhsuk-contents-list__item "
          aria-current="page"
>
          <a
                    class="nhsuk-contents-list__link"
                    href="#"
          >
                    Test Text
          </a>
</li>,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "aria-current": "page",
          "children": <a
            className="nhsuk-contents-list__link"
            href="#"
            onClick={[Function]}
>
            Test Text
</a>,
          "className": "nhsuk-contents-list__item ",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": <a
              class="nhsuk-contents-list__link"
              href="#"
>
              Test Text
</a>,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Test Text",
              "className": "nhsuk-contents-list__link",
              "href": "#",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": Array [
              "Test Text",
            ],
            "type": "a",
          },
        ],
        "type": "li",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
